buildpacks/nodejs-pnpm-install/tests/snapshots/test_skip_build_scripts_from_buildplan.snap
---
source: test_support/src/lib.rs
---
## Heroku Node.js Engine

- Checking Node.js version
  - Node.js version not specified, using `22.x`
  - Resolved Node.js version: `22.16.0`
- Installing Node.js distribution
  - GET https://nodejs.org/download/release/v22.16.0/node-v22.16.0-<arch>.tar.gz ... (OK)
  - Downloading ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `22.16.0 (<arch>)`
  - Installing Node.js `22.16.0 (<arch>)` ... (<time_elapsed>)
- Done (finished in <time_elapsed>)

## Heroku Node.js Corepack

- Using Corepack version `0.32.0`
- Found `packageManager` set to `pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b` in `package.json`
- Enabling Corepack
  - Creating Corepack shims
  - Executing `corepack enable --install-directory /layers/heroku_nodejs-corepack/shim/bin pnpm`
- Installing `pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b`
  - Creating Corepack package manager
  - Running `corepack prepare`

      Preparing pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b...

  - Done (<time_elapsed>)
- Done (finished in <time_elapsed>)

## Heroku Node.js pnpm Install

- Setting up pnpm dependency store
  - Creating new pnpm content-addressable store
  - Creating pnpm virtual store
- Installing dependencies
  - Running `pnpm install --frozen-lockfile`

      Lockfile is up to date, resolution step is skipped
      Packages: +2
      ++

      dependencies:
      + dotenv 16.4.5

      devDependencies:
      + environment 1.1.0

      Done in <time_elapsed>

  - Done (<time_elapsed>)
- Pruning unused dependencies from pnpm content-addressable store
  - Running `pnpm store prune`

      Removed all cached metadata files
      Removed 0 files
      Removed 0 packages

  - Done (<time_elapsed>)
- Running scripts
  - ! Not running `heroku-prebuild` as it was disabled by a participating buildpack
  - ! Not running `build` as it was disabled by a participating buildpack
  - ! Not running `heroku-postbuild` as it was disabled by a participating buildpack
- Pruning dev dependencies
  - Skipping as pruning was disabled by a participating buildpack
- Done (finished in <time_elapsed>)
